<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/pref_category_general"
        android:key="com.embed.candy.category_general">
       <CheckBoxPreference android:defaultValue="true"
            android:key="pref_swarm"
            android:title="@string/pref_swarm"
            android:summary="@string/pref_swarm_summary" />
        <CheckBoxPreference android:defaultValue="false"
            android:key="com.embed.candy.general_zoom"
            android:title="@string/pref_general_zoom"
            android:summary="@string/pref_general_zoom_summary" />
        <CheckBoxPreference android:defaultValue="true"
            android:key="com.embed.candy.general_toasts"
            android:title="@string/pref_general_toasts"
            android:summary="@string/pref_general_toasts_summary" />
        <com.embed.candy.CandySliderPreference
            android:key="com.embed.candy.general_sensitivity"
            android:defaultValue="50"
            android:dialogMessage="@string/pref_general_sensitivity_dialog"
            android:max="100"
            android:summary="@string/pref_general_sensitivity_summary"
            android:title="@string/pref_general_sensitivity" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_graphics"
        android:key="com.embed.candy.category_graphics">
        <ListPreference android:key="com.embed.candy.graphics_quality"
            android:title="@string/pref_graphics_quality"
            android:summary="@string/pref_graphics_quality_summary"
            android:defaultValue="2"
            android:entries="@array/quality"
            android:entryValues="@array/quality_values" />
        <ListPreference android:key="com.embed.candy.graphics_theme"
            android:title="@string/pref_graphics_theme"
            android:summary="@string/pref_graphics_theme_summary"
            android:defaultValue="normal"
            android:entries="@array/theme"
            android:entryValues="@array/theme_values" />
    </PreferenceCategory>
</PreferenceScreen>