<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item
		android:id="@+id/menu_main_item_preferences"
		android:icon="@android:drawable/ic_menu_preferences"
		android:title="@string/menu_main_preferences"/>
	<item
		android:id="@+id/menu_main_item_stats"
		android:icon="@android:drawable/ic_menu_sort_by_size"
		android:title="@string/menu_main_stats"/>
	<item
		android:id="@+id/menu_main_item_restore"
		android:icon="@android:drawable/ic_menu_set_as"
		android:title="@string/menu_main_restore"/>
	<item
		android:id="@+id/menu_main_item_about"
		android:icon="@android:drawable/ic_menu_info_details"
		android:title="@string/menu_main_about"/>
	<item
		android:id="@+id/menu_main_item_bug"
		android:icon="@android:drawable/ic_menu_close_clear_cancel"
		android:title="@string/menu_main_bug"/>
	<item
		android:id="@+id/menu_main_item_star"
		android:icon="@android:drawable/btn_star_big_on"
		android:title="@string/menu_main_rate"/>
</menu>