<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/enclosing_rl"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/background"
	android:fitsSystemWindows="false">
<!-- 		<RelativeLayout android:id="@+id/mainmenu_rl" -->
<!-- 			android:layout_width="fill_parent" -->
<!-- 			android:layout_height="fill_parent"> -->
			<TextView android:id="@+id/mainmenu_tv"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="100dip"
				android:text="@string/app_name"
				android:layout_marginTop="15dip"
				android:layout_marginBottom="10dip"
				android:textColor="@android:color/white"
				android:layout_alignParentTop="true"
				android:layout_centerHorizontal="true"
				android:shadowColor="@android:color/black"
				android:shadowDx="0"
				android:shadowDy="0"
				android:shadowRadius="5"
				android:padding="5dip" />
			<LinearLayout android:id="@+id/mainmenu_ll"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:layout_centerHorizontal="true"
			    android:layout_below="@id/mainmenu_tv">
				<Button android:id="@+id/button_play"
					style="@style/menuButton"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/button_play"
					android:layout_marginBottom="7dip"
					android:focusable="true" />
				<Button android:id="@+id/button_achieve"
					style="@style/menuButton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/button_achieve"
					android:layout_marginBottom="7dip"
					android:focusable="true" />
				<Button android:id="@+id/button_lead"
					style="@style/menuButton"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/button_lead"
					android:focusable="true" />
			</LinearLayout>
			<ImageView android:id="@+id/button_facebook"
				android:contentDescription ="@string/facebookstring"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/fb_button"
				android:scaleType="center"
				android:layout_marginRight="10dip"
				android:layout_marginBottom="10dip"
				android:layout_alignParentRight="true"
				android:layout_alignParentBottom="true" />
			<ImageView android:id="@+id/button_twitter"
			    android:contentDescription ="@string/twitterstring"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/t_button"
				android:scaleType="center"
				android:layout_marginBottom="10dip"
				android:layout_marginRight="6dip"
				android:layout_alignParentBottom="true"
				android:layout_toLeftOf="@id/button_facebook" />
			<ImageView android:id="@+id/my_swarm_button"
			    android:contentDescription ="@string/swarmstring"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/s_button"
				android:scaleType="center"
				android:layout_marginBottom="10dip"
				android:layout_marginRight="6dip"
				android:layout_alignParentBottom="true"
				android:layout_toLeftOf="@id/button_twitter" />
<!-- 		</RelativeLayout> -->
</RelativeLayout>