<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_al"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dip"
    android:background="@drawable/background_radial" >

    <TextView
        android:id="@+id/al_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:padding="5dip"
        android:shadowColor="@android:color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/level_complete"
        android:textColor="@android:color/white"
        android:textSize="30dip" />

    <LinearLayout
        android:id="@+id/ll_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/al_title"
        android:layout_centerHorizontal="true"
        android:layout_margin="7dip"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/al_star1"
            android:layout_width="64px"
            android:layout_height="64px"
            android:scaleType="fitXY"
            android:src="@drawable/star2" />

        <ImageView
            android:id="@+id/al_star2"
            android:layout_width="64px"
            android:layout_height="64px"
            android:scaleType="fitXY"
            android:src="@drawable/star2" />

        <ImageView
            android:id="@+id/al_star3"
            android:layout_width="64px"
            android:layout_height="64px"
            android:scaleType="fitXY"
            android:src="@drawable/star2" />
    </LinearLayout>

    <ImageView
        android:id="@+id/stars_improved"
        android:layout_width="168px"
        android:layout_height="64px"
        android:layout_alignTop="@+id/ll_stars"
        android:layout_toRightOf="@+id/ll_stars"
        android:scaleType="fitXY"
        android:src="@drawable/improved" />

    <LinearLayout
        android:id="@+id/ll_moves_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_stars"
        android:layout_centerHorizontal="true"
        android:gravity="left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_moves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dip"
            android:shadowColor="@android:color/black"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="2"
            android:text="@string/al_moves"
            android:textColor="@android:color/white"
            android:textSize="20dip" />

        <TextView
            android:id="@+id/text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dip"
            android:shadowColor="@android:color/black"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="2"
            android:text="@string/al_time"
            android:textColor="@android:color/white"
            android:textSize="20dip" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_al_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_moves_time"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dip"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_next_level"
            style="@style/menuButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:focusable="true"
            android:text="@string/button_next_level" />

        <Button
            android:id="@+id/button_return_al"
            style="@style/menuButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:focusable="true"
            android:text="@string/button_return_al" />
    </LinearLayout>

</RelativeLayout>